// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading button 1`] = `
<div
  className="registration-nav"
>
  <button
    className="float-left increased-font-size btn btn-outline-primary btn-lg"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Back
  </button>
  <button
    className="float-right loading registration-nav-btn btn btn-primary btn-lg"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <div
      className="spinner spinner-border spinner-border-sm"
    />
    Next
  </button>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="registration-nav"
>
  <button
    className="float-left registration-nav-btn btn btn-outline-primary btn-lg"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Back
  </button>
  <button
    className="float-right loading registration-nav-btn btn btn-primary btn-lg"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Next
  </button>
</div>
`;
